<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_guide"
        android:icon="@drawable/ic_menu_book"
        android:title="@string/menu_guide"
        android:contentDescription="@string/menu_guide"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"
        android:contentDescription="@string/menu_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/menu_profile"
        android:contentDescription="@string/menu_profile"
        app:showAsAction="always" />
</menu>
